added links to catalog and community forum on the index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
         </a>
         {{/if}}
         {{#each cards}}
-        <a href="/">
+        <a href="{{this.url}}">
             <div class="card mt-4" id="card">
                 <div class="card-body">
                     <h5 class="card-title">{{this.card_title}}</h5>
