--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -7,7 +7,7 @@
     <span class="ml-3 mb-3"><strong>COVID-19 Pandemic </strong> <span class=" glyphicon glyphicon-forward p-3"></span>
         {{ covidData.affectedCountries }} nations affected <span class=" glyphicon glyphicon-forward p-3"></span>
         {{ covidData.cases }} total cases
-        <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.active }} active cases:
+        <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.active }} active cases
         <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.deaths }} total deathes
     </span>
     <div class="forecast-table">
