--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -4,14 +4,17 @@
 <div class="location-container bg-white">
     <h4 id="map-h4">{{ location.city }}, {{location.state}} Information</h4>
     <hr>
-    <span class="ml-3 mb-3"><strong>COVID-19 Pandemic </strong> <span class=" glyphicon glyphicon-forward p-3"></span>
-        {{ covidData.affectedCountries }} nations affected <span class=" glyphicon glyphicon-forward p-3"></span>
-        {{ covidData.cases }} total cases
-        <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.active }} active cases
-        <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.deaths }} total deathes
-    </span>
+    <marquee>
+        <span class="ml-3 mb-3"><strong>COVID-19 Pandemic </strong> <span
+                class=" glyphicon glyphicon-forward p-3"></span>
+            {{ covidData.affectedCountries }} nations affected <span class=" glyphicon glyphicon-forward p-3"></span>
+            {{ covidData.cases }} total cases
+            <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.active }} active cases
+            <span class="glyphicon glyphicon-forward p-3"></span> {{ covidData.deaths }} total deathes
+        </span>
+    </marquee>
     <div class="forecast-table">
-        <div class="container">
+        <div class="a-container">
             <div class="forecast-container">
                 {{#each sevenDayNWS}}
                 {{#if @first}}
