--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="#">Sell Supplies</a>
             </li> --}}
             <li class="nav-item">
-                <a class="nav-link" href="#">Discussion Forum</a>
+                <a class="nav-link" href="/forum">Discussion Forum</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
