--- a/views/partials/product_list_item.handlebars
+++ b/views/partials/product_list_item.handlebars
@@ -1,3 +1,5 @@
+{{!-- Might need this #each statement? --}}
+{{!-- {{#each}} --}}
 <div class="product-list-item">
   <div class="product-list-item_image-wrapper">
     <img src="/images/productimages/main/{{product.imageUrl}}" class="product-list-item_image" />
@@ -16,3 +18,4 @@
     </form>
   </div>
 </div>
+{{!-- {{/each}} --}}
