--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -328,8 +328,17 @@ dl.faq button[aria-expanded="true"]::before {
 
 /* Modal styling */
 
+.posts-container {
+  margin: 25px;
+  padding: 25px;
+  background-color: white;
+  color: #353b40;
+  border-radius: 15px;
+}
+
 .modal {
   color: #353b40;
+  border-radius: 15px;
 }
 
 .modal-dialog {
@@ -337,9 +346,53 @@ dl.faq button[aria-expanded="true"]::before {
 }
 
 .modal-header {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   min-height: 200px;
   justify-content: center;
   background-color: rgb(16, 2, 42);
+}
+
+/*  */
+
+.card {
+  margin: 10px 0;
+  border: solid #353b40 2px;
+  border-radius: 6px;
+}
+
+.card-header {
+  padding: 0 10px;
+  margin: 0;
+  color: white;
+  background-color: #353b40;
+}
+
+.card-header h5 {
+  padding: 0;
+  margin: 0;
+}
+.card-header a {
+  color: #00b7ff;
+}
+
+.card-body {
+  padding: 2px 10px;
+  font-size: 16px;
+}
+
+.dropleft {
+  margin-top: 13px;
+  cursor: pointer;
+  float: right;
+}
+
+.dropdown-menu {
+  background-color: #353b40;
+  border: 1px solid white;
+  cursor: pointer;
+  float: right;
+  padding-right: 5px;
+}
+
+.dropdown-menu a {
+  color: white;
 }
