--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -1,12 +1,55 @@
 {{> style }}
 {{> nav }}
 {{> messages}}
-<div class="container">
+<div class="posts-container">
     <div class="row">
-        <div class="col-lg-12 pl-1">
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
+        <div class="col-md-2">
+            <button type="button" id="post-button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
                 + Add Post
             </button>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <select class="custom-select" id="category">
+                    <option selected value="">Locations</option>
+                    <option value="">Show all posts in the US</option>
+                    {{#each cityList}}
+                    <option value="{{this}}">{{this}}</option>
+                    {{/each}}
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            {{#each post}}
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-10">
+                            <div>Posted by <a href="/users/{{this.user}}">{{ this.user }}</a> | {{ this.city }}</div>
+                            <h5>{{ this.title }}</h5>
+                        </div>
+                        <div class="col">
+                            <div class="dropleft">
+                                <i class="fas fa-ellipsis-h" id="dropdownMenuButton" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
+                                </i>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"
+                                    x-placement="bottom-start"
+                                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(438px, 64px, 0px);">
+                                    <a class="dropdown-item" href="#">Edit</a>
+                                    <a class="dropdown-item" href="#">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p>{{ this.body }}</p>
+                </div>
+            </div>
+            {{/each}}
         </div>
     </div>
 </div>
