--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -9,7 +9,7 @@
                         <div class="col-lg-12 top text-light rounded bg-dark p-2"> Add New Post</div>
                     </div>
                     <div class=".modal-header">
-                        <h4>Username: {{ userdata.username }} | Location: {{ userdata.city }},
+                        <h4>Post by {{ userdata.username }} | {{ userdata.city }},
                             {{ userdata.state }}
                         </h4>
                     </div>
