forum displays posts in desc order now

--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -11,7 +11,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <select class="custom-select" id="category">
-                    <option selected value="">Locations</option>
+                    <option selected value="">Select Location</option>
                     <option value="">Show all posts in the US</option>
                     {{#each cityList}}
                     <option value="{{this}}">{{this}}</option>
