one hyperlink lol

--- a/views/catalogue.handlebars
+++ b/views/catalogue.handlebars
@@ -4,7 +4,7 @@
 <div class="catalogue-container body-content layout_content-wrapper">
   {{!-- {{#block 'catalogue'}}{{/block}} --}}
 
-
+  {{{content}}}
   {{!-- catalogue code --}}
   <div class="container">
     <div class="row">
