html pages for nunjucks, setting up erver.js

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -37,7 +37,7 @@
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
     <p>
-        Already registered? <a href="/login">Login</a>
+        Already registered? <a href="/login.handlebars">Login</a>
     </p>
 
 </div>
