--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,7 +26,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
         <p>
-            Don't have an account? <a href="/register.handlebars">Register</a>
+            Don't have an account? <a href="/register">Register</a>
         </p>
     </form>
 
