added an edit feature to the forum (can only edit your own posts too)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,12 @@
 
 <body>
     {{{body}}}
+
 </body>
+<footer class="footer">
+    <div class="footer-container">
+        <span class="text-muted">CriShipped &copy; 2020</span>
+    </div>
+</footer>
 
 </html>
