--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,4 @@
 body {
-<<<<<<< HEAD
   padding: 0px;
   margin: 0px;
 }
@@ -9,8 +8,8 @@ form {
   margin: 0px;
 }
 
-/* Set padding to keep content from hitting the edges
-.body-content {
+/* Set padding to keep content from hitting the edges */
+/* .body-content {
 } */
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -42,56 +41,11 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
   display: none;
-=======
-    padding: 0px;
-    margin: 0px;
-}
-
-form {
-    padding: 0px;
-    margin: 0px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-}
-
-/* styles for validation helpers */
-.field-validation-error {
-    color: #b94a48;
-}
-
-.field-validation-valid {
-    display: none;
-}
-
-input.input-validation-error {
-    border: 1px solid #b94a48;
-}
-
-input[type="checkbox"].input-validation-error {
-    border: 0 none;
-}
-
-.validation-summary-errors {
-    color: #b94a48;
-}
-
-.validation-summary-valid {
-    display: none;
->>>>>>> cd4f9b96798353995865af195d527805e428a479
 }
 
 /*Pagination Color*/
 .custom-pagination .pagination > li > a,
 .custom-pagination .pagination > li > span {
-<<<<<<< HEAD
   border: 1px solid purple;
   color: purple;
 }
@@ -105,27 +59,11 @@ input[type="checkbox"].input-validation-error {
   background-color: #a64ca6;
   border: 1px solid #a64ca6;
   color: white;
-=======
-    border: 1px solid purple;
-    color: purple;
-}
-
-.pagination > li.active > span {
-    background-color: purple;
-    color: #fff;
-}
-
-.pagination > li.active > span:hover {
-    background-color: #a64ca6;
-    border: 1px solid #a64ca6;
-    color: white;
->>>>>>> cd4f9b96798353995865af195d527805e428a479
 }
 
 /*Equal Heights*/
 
 .row.display-flex {
-<<<<<<< HEAD
   display: flex;
   flex-wrap: wrap;
 }
@@ -134,13 +72,3 @@ input[type="checkbox"].input-validation-error {
   display: flex;
   flex-direction: column;
 }
-=======
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.row.display-flex > [class*='col-'] {
-    display: flex;
-    flex-direction: column;
-}
->>>>>>> cd4f9b96798353995865af195d527805e428a479
