--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,6 +9,10 @@ body {
   padding: 0;
 }
 
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
 /* Registration and login page styling */
 #register-jumbo {
   background: url("/images/empty.jpg");
@@ -353,28 +357,28 @@ dl.faq button[aria-expanded="true"]::before {
 
 /*  */
 
-.card {
+.post-card {
   margin: 10px 0;
   border: solid #353b40 2px;
   border-radius: 6px;
 }
 
-.card-header {
+.post-card-header {
   padding: 0 10px;
   margin: 0;
   color: white;
   background-color: #353b40;
 }
 
-.card-header h5 {
+.post-card-header h5 {
   padding: 0;
   margin: 0;
 }
-.card-header a {
+.post-card-header a {
   color: #00b7ff;
 }
 
-.card-body {
+.post-card-body {
   padding: 2px 10px;
   font-size: 16px;
 }
@@ -395,4 +399,20 @@ dl.faq button[aria-expanded="true"]::before {
 
 .dropdown-menu a {
   color: white;
+}
+
+/* Sticky footer */
+
+.text-muted {
+  float: right;
+  padding-right: 30px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px; /* Set the fixed height of the footer here */
+  line-height: 30px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
