--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -1,6 +1,5 @@
 {{> style }}
 {{> nav }}
-{{> messages}}
 <div class="posts-container">
     <div class="row">
         <div class="col-md-2">
@@ -20,14 +19,16 @@
             </div>
         </div>
     </div>
+    {{> messages}}
     <div class="row">
         <div class="col-lg-12">
             {{#each post}}
-            <div class="card">
-                <div class="card-header">
+            <div class="post-card">
+                <div class="post-card-header">
                     <div class="row">
                         <div class="col-10">
-                            <div>Posted by <a href="/users/{{this.user}}">{{ this.user }}</a> | {{ this.city }}</div>
+                            <div>Posted by <a href="/users/{{this.user}}">{{ this.user }}</a> |
+                                {{ this.city }}</div>
                             <h5>{{ this.title }}</h5>
                         </div>
                         <div class="col">
@@ -35,17 +36,15 @@
                                 <i class="fas fa-ellipsis-h" id="dropdownMenuButton" data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
                                 </i>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"
-                                    x-placement="bottom-start"
-                                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(438px, 64px, 0px);">
-                                    <a class="dropdown-item" href="#">Edit</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a href="/forum/edit/{{this.id}}" class="dropdown-item">Edit</a>
                                     <a class="dropdown-item" href="#">Delete</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-body">
+                <div class="post-card-body">
                     <p>{{ this.body }}</p>
                 </div>
             </div>
@@ -56,6 +55,6 @@
 {{> post}}
 <script>
     var username = "{{ userdata.username }}";
-    var usercity = "{{ userdata.city }}"
+    var usercity = "{{ userdata.city }}";
 </script>
 <script src="/js/forum.js"></script>
