--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -3,8 +3,10 @@
 
 <div class="account-container">
     {{> messages}}
+
     <h2>Edit your post</h2>
-    <form action="/api/posts" method="PUT">
+    <form>
+        <div>Post ID: {{post.id}} | username: {{post.user}} | city: {{post.city}}</div>
         <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" value="{{ post.title }}" class="form-control" name="title" id="title" required>
@@ -15,7 +17,40 @@
             <textarea type="text" class="form-control" rows="8" name="body" id="body"
                 required>{{ post.body }}</textarea>
         </div>
-        <button class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-primary" id="update">Update</button>
     </form>
 </div>
 <br><br><br><br>
+
+<script>
+    var bodyInput = $("#body");
+    var titleInput = $("#title");
+
+    $("#update").on("click", function handleFormSubmit(event) {
+        event.preventDefault();
+        if (!titleInput.val().trim() || !bodyInput.val().trim()) {
+            return;
+        }
+        console.log(newPost)
+        var newPost = {
+            id: "{{post.id}}",
+            user: "{{post.user}}",
+            title: $("#title").val().trim(),
+            body: $("#body").val().trim()
+        }
+        updatePost(newPost);
+    })
+
+    function updatePost(post) {
+        $.ajax({
+            method: "PUT",
+            url: "/api/posts",
+            data: post
+        }).then(function () {
+            window.location.href = "/forum";
+        });
+    }
+
+
+
+</script>
