--- a/views/catalogue.njk
+++ b/views/catalogue.njk
@@ -1,24 +1,52 @@
+<style>
+    body {
+        color: white;
+    }
+
+    body::after {
+        content: "";
+        background: url("/images/track.jpeg");
+        background-size: cover;
+        background-position-y: top;
+        opacity: 0.5;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
+</style>
 
 
-{% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 index__filter-wrapper">
-      <h4 class="index__filter-title">Filter By</h4>
-      <hr />
-      <div>
-        {% include 'partials/category.njk' %}
+<div class="catalogue-container body-content layout_content-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 index__filter-wrapper">
+        <h4 class="index__filter-title">Filter By</h4>
+        <hr />
+        <div>
+          {% include 'partials/category.njk' %}
+        </div>
+        <div>
+          {% include 'partials/brand.njk' %}
+        </div>
       </div>
-      <div>
-        {% include 'partials/brand.njk' %}
+      <div class="col-md-9 {% if page_object %}index__product-wrapper--has-pages{%else%}index__product-wrapper--no-pages{% endif%}">
+        {% include 'partials/product_list.njk' %}
       </div>
-    </div>
-    <div class="col-md-9 {% if page_object %}index__product-wrapper--has-pages{%else%}index__product-wrapper--no-pages{% endif%}">
-      {% include 'partials/product_list.njk' %}
     </div>
   </div>
+
+
+
+<hr />
+<footer>
+  <p class="layout_copyright">&copy; {{year}} - CriShipped</p>
+</footer>
+
+
 </div>
-
-
-{% endblock %}
+<br><br><br><br>
+<script src="/js/catalogue.js"></script>
