added delete functionality to forum

--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -38,7 +38,7 @@
                                 </i>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a href="/forum/edit/{{this.id}}" class="dropdown-item">Edit</a>
-                                    <a class="dropdown-item" href="#">Delete</a>
+                                    <a class="dropdown-item delete" id="delete" data-id="{{this.id}}">Delete</a>
                                 </div>
                             </div>
                         </div>
