added some pictures of ventelators

--- a/views/partials/product_list_item.njk
+++ b/views/partials/product_list_item.njk
@@ -1,6 +1,6 @@
 <div class="product-list-item">
   <div class="product-list-item__image-wrapper">
-    <img src="/images/productimages/main/{{product.imageUrl}}" class="product-list-item__image" />
+    <img src="/images/{{product.image_url}}" class="product-list-item__image" />
   </div>
   <div>
     <p class="product-list-item__product-name">{{product.name}}</p>
