--- a/public/styles/scss/catalogue/crishipped.css
+++ b/public/styles/scss/catalogue/crishipped.css
@@ -141,4 +141,158 @@
   border: none;
 }
 
+.cart_detail {
+  margin-bottom: 100px;
+  padding-bottom: 100px;
+}
+.cart_detail__row {
+  height: auto;
+}
+.cart_detail__cart-panel {
+  background-color: #f8f8f8;
+  height: inherit;
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+.cart_detail__cart-panel-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 20px 20px 20px;
+}
+.cart_detail__cart-panel-title {
+  color: purple;
+  font-size: 22px;
+  font-weight: 500;
+}
+.cart_detail__continue-shopping-button {
+  color: purple;
+  padding: 12px;
+  border: 1px solid purple;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+}
+.cart_detail__continue-shopping-button:hover {
+  background-color: #fff0ff;
+  color: purple;
+  padding: 12px;
+  border: 1px solid purple;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+}
+.cart_detail__table-head {
+  color: purple;
+}
+.cart_detail__table-head-item {
+  font-size: 14px;
+  font-weight: 600;
+}
+.cart_detail__image {
+  height: 70px;
+  width: 65px;
+}
+.cart_detail__table-body-item-wrapper {
+  padding-top: 60px;
+}
+.cart_detail__table-body-item-name {
+  font-size: 12px;
+  font-weight: 600;
+  padding-top: 40px;
+  color: #400040;
+}
+.cart_detail__table-body-item-price {
+  font-size: 14px;
+  font-weight: 500;
+  padding-top: 35px;
+  color: #666547;
+}
+.cart_detail__table-body-item-quantity {
+  font-size: 14px;
+  font-weight: 500;
+  padding-top: 35px;
+  color: #36454f;
+}
+.cart_detail__table-body-item-total {
+  font-size: 15px;
+  font-weight: 500;
+  padding-top: 35px;
+  color: #004c4c;
+}
+.cart_detail__table-remove-button {
+  background-color: #f2e5f2;
+  padding: 4px 8px 4px 8px;
+  border: 1px solid purple;
+  color: purple;
+}
+.cart_detail__summary-panel {
+  background-color: #f2e5f2;
+  height: inherit;
+  padding: 50px 20px 20px 40px;
+}
+.cart_detail__summary-panel-title-wrapper {
+  margin-bottom: 12px;
+}
+.cart_detail__summary-panel-title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #400040;
+}
+.cart_detail__summary-panel-total {
+  color: #400040;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 18px;
+}
+.cart_detail__summary-panel-total-title {
+  margin-right: 50px;
+}
+.cart_detail__summary-panel-ads {
+  margin-top: 25px;
+}
+.cart_detail__summary-panel-ads-lable {
+  font-size: 14px;
+  font-weight: 600;
+  color: #400040;
+}
+.cart_detail__summary-panel-checkout-button {
+  background-color: purple;
+  color: white;
+  padding: 14px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 500;
+}
+.cart_detail__summary-panel-checkout-button:hover {
+  background-color: #9a009a;
+  color: white;
+  padding: 14px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.cart_summary_widget__wrapper {
+  color: purple;
+  margin-top: -10px;
+  font-size: 14px;
+}
+.cart_summary_widget__item-count {
+  font-size: 14px;
+  font-weight: 600;
+  color: #65737e;
+}
+.cart_summary_widget__cart-total {
+  font-size: 16px;
+  font-weight: 600;
+  color: #41533b;
+}
+.cart_summary_widget__cart-icon {
+  color: purple;
+  font-size: 25px;
+  margin-top: -10px;
+}
+
 /*# sourceMappingURL=crishipped.css.map */
