--- a/views/forum.handlebars
+++ b/views/forum.handlebars
@@ -27,7 +27,7 @@
                 <div class="post-card-header">
                     <div class="row">
                         <div class="col-10">
-                            <div>Posted by <a href="/users/{{this.user}}">{{ this.user }}</a> |
+                            <div>Posted by <a href="/users/{{this.user}}" target="_blank">{{ this.user }}</a> |
                                 {{ this.city }}</div>
                             <h5>{{ this.title }}</h5>
                         </div>
@@ -46,6 +46,7 @@
                 </div>
                 <div class="post-card-body">
                     <p>{{ this.body }}</p>
+                    <a href="/forum/post/{{this.id}}">Discussion ({{ this.Comments.length }})</a>
                 </div>
             </div>
             {{/each}}
