--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -39,5 +39,6 @@
 <script>
     var username = "{{ userdata.username }}";
     var postId = "{{ post.id }}";
+    var title = "{{ post.title }}";
 </script>
 <script src="/js/postComments.js"></script>
