--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -416,3 +416,22 @@ dl.faq button[aria-expanded="true"]::before {
   line-height: 30px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+/* Notifications */
+#bell {
+  cursor: pointer;
+}
+
+#bell:hover {
+  font-size: 41px;
+}
+
+.popover {
+  max-width: 100%;
+  width: 500px;
+}
+
+.popover-header {
+  background-color: #353b40;
+  color: white;
+}
