--- a/views/catalogue.njk
+++ b/views/catalogue.njk
@@ -40,6 +40,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/catalogue">Catalogue</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="/orders">Orders</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/forum">Discussion Forum</a>
             </li>
@@ -65,6 +68,9 @@
 </nav>
 
 <div class="catalogue-container">
+{% if messages.success %}
+    <div class="alert alert-primary" role="alert"><i class="fas fa-shopping-cart"></i> {{messages.success}}</div>
+  {% endif %}
   <div class="container">
     <div class="row">
       <div class="col-md-3 index__filter-wrapper">
@@ -82,6 +88,7 @@
       </div>
       
       {# /catalogue/ #}
+      
       <div class="col-md-9 {% if page_object %}index__product-wrapper--has-pages{%else%}index__product-wrapper--no-pages{% endif%}">
         {% include 'partials/product_list.njk' %}
       </div>
