--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,14 +4,19 @@
 <div class="container">
     <h1 id="hi">Hi {{ firstName }} <i class="fas fa-bell" id="bell" data-toggle="popover" title="Notifications"
             data-content="
+            {{#if comments}}
             {{#each comments}}
             {{#unless seen}}
-            {{#ifCond this.poster ./username}}
+            {{#ifCond commenter ../username}}
             {{else}}
             <div class='notify'><a href=/users/{{this.commenter}}> {{this.commenter}}</a> replied to your post <a href=/forum/post/{{this.PostId}}>{{this.title}}</a> {{ prettifyDate this.createdAt }}<i class='fas fa-times-circle' id='{{this.id}}'></i></div>
             {{/ifCond}}
             {{/unless}}
             {{/each}}
+            <div>See all posts on the <a href='/forum'>forum</a></div>
+            {{else}}
+            <p>No notifications yet. Get started by posting to the <a href='/forum'>forum</a></p>
+            {{/if}}
             " data-html="true"></i>
     </h1>
     <div class="grid-container">
