--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -14,9 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/catalogue">Catalogue</a>
             </li>
-            {{!-- <li class="nav-item">
-                <a class="nav-link" href="#">Sell Supplies</a>
-            </li> --}}
+            <li class="nav-item">
+                <a class="nav-link" href="/orders">Orders</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/forum">Discussion Forum</a>
             </li>
