--- a/views/partials/product_list_item.njk
+++ b/views/partials/product_list_item.njk
@@ -9,10 +9,12 @@
     <p class="product-list-item__product-price">${{product.price}}</p>
   </div>
   <div>
-    <form method="post" action="/">
+    <form method="post" action="/api/orders">
       <input type="hidden" name="productId" value="{{product.id}}" />
+      <input type="hidden" name="productName" value="{{product.name}}" />
+      <input type="hidden" name="productPrice" value="{{product.price}}" />
       <input type="hidden" name="originalUrl" value="{{originalUrl}}" />
-      <button type="submit" name="submit" class="product-list-item__button">Add to Cart</button>
+      <button type="submit" name="submit" class="product-list-item__button">Add to Order Requests</button>
     </form>
   </div>
 </div>
