order page style

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -481,7 +481,7 @@ dl.faq button[aria-expanded="true"]::before {
 }
 
 .order h5:hover {
-  padding: 0 0 0 1;
+  padding: 0 0 0 1px;
 }
 
 .request {
