forum username had extra space:

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -16,8 +16,8 @@
         <div class="post-card-header">
             <div class="row">
                 <div class="col-10">
-                    <div>Posted by <a href="/users/{{post.user}}" target="_blank">{{ post.user }}
-                        </a>{{ prettifyDate post.createdAt }} | {{ post.city }}
+                    <div>Posted by <a href="/users/{{post.user}}" target="_blank">{{ post.user }}</a>
+                        {{ prettifyDate post.createdAt }} | {{ post.city }}
                     </div>
                     <h5>{{ post.title }}</h5>
                 </div>
